--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.5"
+  },
+  "dependencies": {
+    "navigo": "^8.11.1"
   }
 }
