--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start:server":"json-server --watch on db.json --port 3001",
+    "start:server": "json-server --watch db.json --port 3001",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
