--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start:server": "json-server --watch db.json --port 3001",
+    "start:server": "json-server-auth --watch db.json --port 3001",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -14,6 +14,7 @@
     "eslint": "^8.21.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "json-server-auth": "^2.1.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.5"
